<resources>
    <string name="app_name">ZemogaTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_title">Description</string>
    <string name="comments_title">COMMENTS</string>
    <string name="website_label">Website:</string>
    <string name="phone_label">Phone:</string>
    <string name="email_label">Email:</string>
    <string name="name_label">Name:</string>
    <string name="user_title">User</string>
    <string name="favorite_title">Favorite</string>
    <string name="delete_label">Delete</string>
</resources>