<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PostDetailActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_title"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_title"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_title"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>

                <ProgressBar
                    android:id="@+id/progressUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name_label"
                        android:textSize="16sp"
                        android:layout_weight="0.7"/>
                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_weight="3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/email_label"
                        android:textSize="16sp"
                        android:layout_weight="0.7"/>
                    <TextView
                        android:id="@+id/textViewEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_weight="3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_label"
                        android:textSize="16sp"
                        android:layout_weight="0.7"/>
                    <TextView
                        android:id="@+id/textViewPhone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_weight="3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="16dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/website_label"
                        android:textSize="16sp"
                        android:layout_weight="0.7"/>
                    <TextView
                        android:id="@+id/textViewWeb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_weight="3"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments_title"
                android:padding="5dp"
                android:background="@color/gray_background"/>

            <ProgressBar
                android:id="@+id/progressComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/card_comment"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>